[gd_scene load_steps=4 format=3 uid="uid://bkldpx73g5hn6"]

[ext_resource type="Script" path="res://addons/msca/tests/Test.gd" id="1_gim83"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bh0th"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m3fto"]

[node name="Test" type="Node2D"]
script = ExtResource("1_gim83")

[node name="Controls" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -155.0
offset_top = -84.0
offset_right = 156.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Controls"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2

[node name="WalkButton" type="Button" parent="Controls/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_bh0th")
text = "Walk"

[node name="RunButton" type="Button" parent="Controls/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_m3fto")
text = "Run"

[node name="AnimLabel" type="Label" parent="Controls"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 40.0
grow_vertical = 0
theme_override_font_sizes/font_size = 12
text = "Walk"

[node name="Camera2D" type="Camera2D" parent="."]
texture_filter = 1
zoom = Vector2(2, 2)

[connection signal="pressed" from="Controls/HBoxContainer/WalkButton" to="." method="_on_walk_button_pressed"]
[connection signal="pressed" from="Controls/HBoxContainer/RunButton" to="." method="_on_run_button_pressed"]
